@@ -43,13 +43,6 @@ loop_optimizer_init (unsigned flags)
   struct loops *loops = XCNEW (struct loops);
   edge e;
   edge_iterator ei;
-  static bool first_time = true;
-
-  if (first_time)
-    {
-      first_time = false;
-      init_set_costs ();
-    }
 
   /* Avoid annoying special cases of edges going to exit
      block.  */
